...
  onCancel,
}) {
  //confirmation message to cancel booking
  const handleCancelBooking = () => {
    Msg(
      "Cancel Booking",
      "Are you sure you want to cancel this booking?",
      () => onCancel(id, facilityId, facilityNumber, date, time)
    );
  };

  // convert time in number to string of HH:00
  const parseTime = (time) => {
...
        </View>
        {onCancel && (
          <TouchableOpacity
            style={styles.cancelBtn}
            onPress={handleCancelBooking}
          >
            <Text style={styles.cancelText}>Cancel</Text>
          </TouchableOpacity>
        )}
      </View>
    </View>
  );
}
...
